test/semantic_errors/invalid_declaration2.mc
void main() {
    char a;
    bool b = a; /* assignment of char to a bool */
}